force-app/main/default/objects/BOT_PA_CP_From_CofigValues__mdt/BOT_PA_CP_From_CofigValues__mdt.object-meta.xml
<CustomObject>
    <description>To hold the configuration values of the PA &amp; CP forms. Configuration values contain Base URL, Client Id, AppName, Version number, and secret key.</description>
    <label>PA&amp;CP From CofigValue</label>
    <pluralLabel>PA&amp;CP From CofigValues</pluralLabel>
</CustomObject>