force-app/main/default/objects/BOT_PA_CP_From_CofigValues__mdt/fields/BOT_AppName__c.field-meta.xml
<CustomField>
    <fullName>BOT_AppName__c</fullName>
    <description>to hold the Application Name</description>
    <label>AppName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>