force-app/main/default/objects/BOT_PA_CP_From_CofigValues__mdt/fields/BOT_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>BOT_Client_Id__c</fullName>
    <description>To hold the client Id</description>
    <label>Client Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>