force-app/main/default/objects/BOT_PA_CP_From_CofigValues__mdt/fields/BOT_EndPoint_URL__c.field-meta.xml
<CustomField>
    <fullName>BOT_EndPoint_URL__c</fullName>
    <description>To hold the endpoint URL used to get the response.</description>
    <label>EndPoint URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>