force-app/main/default/objects/BOT_PA_CP_From_CofigValues__mdt/fields/BOT_SecretKey__c.field-meta.xml
<CustomField>
    <fullName>BOT_SecretKey__c</fullName>
    <label>SecretKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>