force-app/main/default/objects/BOT_PA_CP_From_CofigValues__mdt/fields/BOT_VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>BOT_VersionNumber__c</fullName>
    <label>VersionNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>